# prime_edit

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  TOOLBAR_FEATURES.md  TOOLBAR_ICONS.md  TOOLBAR_LAYOUT.md  colorize_icons.py  download_icons.py  fix_svg_icons.py  notepad-supreme-requirements.md  update-docs.sh  update_icons.py
.github/workflows/: claude-review.yml
benchmarks/: bench_largefile.sh
docs/superpowers/plans/: 2026-03-25-phase1-notepadpp-parity.md  2026-03-25-phase2-notepadpp-parity.md
docs/superpowers/specs/: 2026-03-25-phase1-notepadpp-parity-design.md  2026-03-25-phase2-notepadpp-parity-design.md  2026-03-25-phase3-feature1-lsp-integration-design.md
html-docs/: faq.html  guide.html  index.html  landing.html
html-docs-old/: README.md  architecture.html  index.html  phase1.html  phase2.html  phase3.html  phase4.html  requirements.html
html-docs/backup/: index.html  index_2.html
html-docs/css/: style.css
release/: prime-edit_1.0.0_amd64.deb
release_artifacts/: README.md  RELEASE_NOTES.md
resources/: olive-notepad.desktop  prime-edit.desktop  resources.qrc
resources/syntax/: ada.json  apache.json  assembly.json  awk.json  bash.json  batch.json  c.json  clojure.json  cmake.json  cobol.json  coffeescript.json  cpp.json  crystal.json  csharp.json  css.json  csv.json  cuda.json  d.json  dart.json  diff.json  dockerfile.json  dotenv.json  editorconfig.json  elixir.json  erlang.json  fish.json  fortran.json  fsharp.json  git.json  glsl.json  go.json  graphql.json  groovy.json  haskell.json  hcl.json  html.json  ini.json  java.json  javascript.json  json.json  (+56 more)
resources/themes/: dark.json  light.json  notepadpp.json  olive.json
src/: main.cpp
src/core/: charsetdetector.cpp  charsetdetector.h  document.cpp  document.h  documentmanager.cpp  documentmanager.h  encoding.cpp  encoding.h  gitgutter.cpp  gitgutter.h  islamicbridge.cpp  islamicbridge.h  largefile.cpp  largefile.h  llmevaluator.cpp  llmevaluator.h  lspclient.cpp  lspclient.h  lspmanager.cpp  lspmanager.h  macrorecorder.cpp  macrorecorder.h  piecetable.cpp  piecetable.h  plugininterface.h  pluginmanager.cpp  pluginmanager.h  remoteconnection.cpp  remoteconnection.h  schemavalidator.cpp  schemavalidator.h  searchengine.cpp  searchengine.h  session.cpp  session.h
src/syntax/: highlighter.cpp  highlighter.h  languagemanager.cpp  languagemanager.h
src/ui/: columneditor.cpp  columneditor.h  commandpalette.cpp  commandpalette.h  completionpopup.cpp  completionpopup.h  documentmap.cpp  documentmap.h  editor.cpp  editor.h  endpointconfigdialog.cpp  endpointconfigdialog.h  evalresultwidget.cpp  evalresultwidget.h  fileexplorer.cpp  fileexplorer.h  finddialog.cpp  finddialog.h  functionlist.cpp  functionlist.h  gitcommitdialog.cpp  gitcommitdialog.h  gitdiffviewer.cpp  gitdiffviewer.h  gitstatusdelegate.cpp  gitstatusdelegate.h  hexviewer.cpp  hexviewer.h  incrementalsearchbar.cpp  incrementalsearchbar.h  linenumberarea.cpp  linenumberarea.h  lspbridge.cpp  lspbridge.h  macrodialog.cpp  macrodialog.h  mainwindow.cpp  mainwindow.h  mainwindow_extended.cpp  markdownpreview.cpp  (+31 more)
src/utils/: fileutils.cpp  fileutils.h  settings.cpp  settings.h
tests/: mma.txt  sample_notebook.ipynb  usp_load_icm_product.sql
tests/validation/: CMakeLists.txt  crash_test.cpp  test_all_features.cpp
